# my-hooks

./: .pre-commit-hooks.yaml  pyproject.toml
hooks/: file_name_checker.py  node_name_checker.py  node_order_checker.py  node_path_checker.py  signal_connection_checker.py
my_hooks.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
