[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "my-hooks"
version = "1.1.0"
description = "Various checks for Godot projects"
authors = [
  { name="Niklas Elixmann", email="niwortma@gmail.de" }
]
dependencies = []       

[project.scripts]
file-name-checker = "hooks.file_name_checker:main"
node-name-checker = "hooks.node_name_checker:main"
signal-connection-checker = "hooks.signal_connection_checker:main"
node-order-checker = "hooks.node_order_checker:main"
node-path-checker = "hooks.node_path_checker:main"